// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup snapshot renders correctly 1`] = `
<Popup
  afterClose={[MockFunction]}
  destroy={true}
  direction="bottom"
  lockScroll={true}
  onMaskClick={[MockFunction]}
  visible={false}
/>
`;

exports[`Popup snapshot renders mount node correctly 1`] = `
<Popup
  afterClose={[MockFunction]}
  destroy={true}
  direction="bottom"
  lockScroll={true}
  mountContainer={[Function]}
  onMaskClick={[MockFunction]}
  visible={true}
>
  <Portal
    afterClose={[MockFunction]}
    animationDuration={200}
    animationType="fade"
    direction="bottom"
    handlePortalUnmount={[Function]}
    mask={true}
    mountContainer={[Function]}
    onMaskClick={[MockFunction]}
    prefixCls="za-popup"
    visible={true}
  >
    <Trigger
      disabled={false}
      onClose={[Function]}
      visible={true}
    >
      <Portal
        containerInfo={
          <div
            class="za-popup-container"
          >
            <div
              class="za-mask za-fade-enter za-mask--normal"
              style="animation-duration: 200ms;"
            />
            <div
              class="za-popup__wrapper"
              data-width="0"
              role="dialog"
            >
              <div
                class="za-popup za-popup--bottom za-popup--show"
                data-width="0"
                role="document"
                style="transition-duration: 200ms; transition-property: transform;"
              >
                foo
              </div>
            </div>
          </div>
        }
      >
        <Mask
          className="za-fade-enter"
          style={
            Object {
              "WebkitAnimationDuration": "200ms",
              "animationDuration": "200ms",
            }
          }
          type="normal"
          visible={true}
        >
          <div
            className="za-mask za-fade-enter za-mask--normal"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
          />
        </Mask>
        <div
          className="za-popup__wrapper"
          data-width={0}
          onClick={[Function]}
          role="dialog"
          style={Object {}}
        >
          <div
            className="za-popup za-popup--bottom"
            data-width={0}
            role="document"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "WebkitTransitionProperty": "transform",
                "transitionDuration": "200ms",
                "transitionProperty": "transform",
              }
            }
          >
            foo
          </div>
        </div>
      </Portal>
    </Trigger>
  </Portal>
</Popup>
`;

exports[`Popup snapshot renders mount without mountContainer 1`] = `
<Popup
  afterClose={[MockFunction]}
  destroy={true}
  direction="bottom"
  lockScroll={true}
  mountContainer={false}
  onMaskClick={[MockFunction]}
  visible={true}
>
  <Portal
    afterClose={[MockFunction]}
    animationDuration={200}
    animationType="fade"
    direction="bottom"
    handlePortalUnmount={[Function]}
    mask={true}
    mountContainer={false}
    onMaskClick={[MockFunction]}
    prefixCls="za-popup"
    visible={true}
  >
    <Trigger
      disabled={false}
      onClose={[Function]}
      visible={true}
    >
      <div
        className="za-popup-container"
      >
        <Mask
          className="za-fade-enter"
          style={
            Object {
              "WebkitAnimationDuration": "200ms",
              "animationDuration": "200ms",
            }
          }
          type="normal"
          visible={true}
        >
          <div
            className="za-mask za-fade-enter za-mask--normal"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
          />
        </Mask>
        <div
          className="za-popup__wrapper"
          data-width={0}
          onClick={[Function]}
          role="dialog"
          style={Object {}}
        >
          <div
            className="za-popup za-popup--bottom"
            data-width={0}
            role="document"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "WebkitTransitionProperty": "transform",
                "transitionDuration": "200ms",
                "transitionProperty": "transform",
              }
            }
          >
            foo
          </div>
        </div>
      </div>
    </Trigger>
  </Portal>
</Popup>
`;
